@@ -3,6 +3,11 @@ function reIndex(el) {
     var url    = location.toString();
     ajaxRequest(el, url, parameters);
 }
+function deleteTokens(el) {
+	var parameters = {ajax:1, delete_tokens:1, method:'get'};
+    var url    = location.toString();
+    ajaxRequest(el, url, parameters);
+}
 function compressTests(el) {
 	var parameters = {ajax:1, compress_tests:1, method:'get'};
     ajaxRequest(el, location.toString(), parameters);
